--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ link_directories(/opt/homebrew/Cellar/opencv/4.7.0_4/lib)
 
 link_directories(/Users/polina/Desktop/С++/2_Project/cmake-build-debug/pics/)
 
-add_executable(opencv main.cpp Trackbar.hpp)
+add_executable(opencv main.cpp Trackbar.hpp Trackbar.cpp)
 
 set(OpenCV_LIBS opencv_core opencv_imgproc opencv_highgui opencv_imgcodecs)
 
