--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,11 +9,8 @@ find_package(OpenCV REQUIRED)
 include_directories(/opt/homebrew/Cellar/opencv/4.7.0_4/include)
 link_directories(/opt/homebrew/Cellar/opencv/4.7.0_4/lib)
 
-link_directories(/Users/polina/Desktop/С++/2_Project/cmake-build-debug/pics/)
-
-add_executable(opencv main.cpp Trackbar.hpp Trackbar.cpp)
+add_executable(opencv main.cpp Trackbar.hpp Trackbar.cpp pics)
 
 set(OpenCV_LIBS opencv_core opencv_imgproc opencv_highgui opencv_imgcodecs)
-
 
 target_link_libraries(opencv ${OpenCV_LIBS})
